[package]
name = "dag-jose"
version = "0.1.3"
edition = "2021"
authors = ["Nathaniel Cook <nvcook42@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "ipld dag-jose codec"
repository = "https://github.com/ceramicnetwork/rust-dag-jose"

[features]
dag-json = ["dep:libipld-json"]

[dependencies]
anyhow = "1.0.69"
base64-url = "2.0.0"
libipld = { version = "0.16.0", default-features = false, features = [
    "serde-codec",
] }
libipld-json = { version = "0.16.0", default-features = false, optional = true }
serde = "1.0.152"
serde_derive = "1.0.152"
serde_ipld_dagcbor = "0.3.0"
thiserror = "1.0.38"

[dev-dependencies]
assert-json-diff = "2.0.2"
hex = "0.4.3"
once_cell = "1.17.0"
serde_json = "1.0.92"
testmark = { git = "https://github.com/bsundsrud/rust-testmark" }
