[package]
name = "dag-jose"
version = "0.1.4"
edition = "2021"
authors = ["Nathaniel Cook <nvcook42@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "ipld dag-jose codec"
repository = "https://github.com/ceramicnetwork/rust-dag-jose"
resolver = "2"

[features]
dag-json = ["dep:serde_ipld_dagjson"]

[dependencies]
anyhow = "1"
base64-url = { version = "2.0.2" }
ipld-core = { version = "0.4" }
serde_ipld_dagjson = { version = "0.2", default-features = false, optional = true }
serde_ipld_dagcbor = "0.6"
serde = "1"
serde_derive = "1"
thiserror = "1"

[dev-dependencies]
assert-json-diff = "2"
hex = "0.4"
once_cell = "1"
serde_json = "1"
testmark = { git = "https://github.com/bsundsrud/rust-testmark" }
